Flex_Bison/calc3.output
Grammar

    0 $accept: function $end

    1 function: function stmt
    2         | %empty

    3 stmt: ';'
    4     | ','
    5     | expr ';'
    6     | expr ','
    7     | PRINT expr ';'
    8     | VARIABLE '=' expr ';'
    9     | VARIABLE '=' expr ','

   10 expr: INTEGER
   11     | VARIABLE
   12     | '~' expr
   13     | '^' expr
   14     | expr INC
   15     | INC expr
   16     | expr DEC
   17     | DEC expr
   18     | expr '+' expr
   19     | expr '-' expr
   20     | expr '*' expr
   21     | expr '/' expr
   22     | expr '#' expr
   23     | expr '<' expr
   24     | expr '>' expr
   25     | expr GE expr
   26     | expr LE expr
   27     | expr NE expr
   28     | expr EQ expr
   29     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 22
    '(' (40) 29
    ')' (41) 29
    '*' (42) 20
    '+' (43) 18
    ',' (44) 4 6 9
    '-' (45) 19
    '/' (47) 21
    ';' (59) 3 5 7 8
    '<' (60) 23
    '=' (61) 8 9
    '>' (62) 24
    '^' (94) 13
    '~' (126) 12
    error (256)
    PRINT (258) 7
    EQ (259) 28
    NE (260) 27
    GE (261) 25
    LE (262) 26
    INTEGER <iValue> (263) 10
    VARIABLE <sIndex> (264) 8 9 11
    INC (265) 14 15
    DEC (266) 16 17


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    function (27)
        on left: 1 2
        on right: 0 1
    stmt <nPtr> (28)
        on left: 3 4 5 6 7 8 9
        on right: 1
    expr <nPtr> (29)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 5 6 7 8 9 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29


State 0

    0 $accept: . function $end

    $default  reduce using rule 2 (function)

    function  go to state 1


State 1

    0 $accept: function . $end
    1 function: function . stmt

    $end      shift, and go to state 2
    PRINT     shift, and go to state 3
    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10
    ';'       shift, and go to state 11
    ','       shift, and go to state 12

    stmt  go to state 13
    expr  go to state 14


State 2

    0 $accept: function $end .

    $default  accept


State 3

    7 stmt: PRINT . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 16


State 4

   10 expr: INTEGER .

    $default  reduce using rule 10 (expr)


State 5

    8 stmt: VARIABLE . '=' expr ';'
    9     | VARIABLE . '=' expr ','
   11 expr: VARIABLE .

    '='  shift, and go to state 17

    $default  reduce using rule 11 (expr)


State 6

   13 expr: '^' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 18


State 7

   12 expr: '~' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 19


State 8

   15 expr: INC . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 20


State 9

   17 expr: DEC . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 21


State 10

   29 expr: '(' . expr ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 22


State 11

    3 stmt: ';' .

    $default  reduce using rule 3 (stmt)


State 12

    4 stmt: ',' .

    $default  reduce using rule 4 (stmt)


State 13

    1 function: function stmt .

    $default  reduce using rule 1 (function)


State 14

    5 stmt: expr . ';'
    6     | expr . ','
   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    EQ   shift, and go to state 23
    NE   shift, and go to state 24
    '>'  shift, and go to state 25
    '<'  shift, and go to state 26
    GE   shift, and go to state 27
    LE   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35
    ';'  shift, and go to state 36
    ','  shift, and go to state 37


State 15

   11 expr: VARIABLE .

    $default  reduce using rule 11 (expr)


State 16

    7 stmt: PRINT expr . ';'
   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    EQ   shift, and go to state 23
    NE   shift, and go to state 24
    '>'  shift, and go to state 25
    '<'  shift, and go to state 26
    GE   shift, and go to state 27
    LE   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35
    ';'  shift, and go to state 38


State 17

    8 stmt: VARIABLE '=' . expr ';'
    9     | VARIABLE '=' . expr ','

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 39


State 18

   13 expr: '^' expr .
   14     | expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 13 (expr)


State 19

   12 expr: '~' expr .
   14     | expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 12 (expr)


State 20

   14 expr: expr . INC
   15     | INC expr .
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 15 (expr)


State 21

   14 expr: expr . INC
   16     | expr . DEC
   17     | DEC expr .
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 17 (expr)


State 22

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr
   29     | '(' expr . ')'

    EQ   shift, and go to state 23
    NE   shift, and go to state 24
    '>'  shift, and go to state 25
    '<'  shift, and go to state 26
    GE   shift, and go to state 27
    LE   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35
    ')'  shift, and go to state 40


State 23

   28 expr: expr EQ . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 41


State 24

   27 expr: expr NE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 42


State 25

   24 expr: expr '>' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 43


State 26

   23 expr: expr '<' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 44


State 27

   25 expr: expr GE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 45


State 28

   26 expr: expr LE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 46


State 29

   18 expr: expr '+' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 47


State 30

   19 expr: expr '-' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 48


State 31

   20 expr: expr '*' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 49


State 32

   21 expr: expr '/' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 50


State 33

   22 expr: expr '#' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 15
    '^'       shift, and go to state 6
    '~'       shift, and go to state 7
    INC       shift, and go to state 8
    DEC       shift, and go to state 9
    '('       shift, and go to state 10

    expr  go to state 51


State 34

   14 expr: expr INC .

    $default  reduce using rule 14 (expr)


State 35

   16 expr: expr DEC .

    $default  reduce using rule 16 (expr)


State 36

    5 stmt: expr ';' .

    $default  reduce using rule 5 (stmt)


State 37

    6 stmt: expr ',' .

    $default  reduce using rule 6 (stmt)


State 38

    7 stmt: PRINT expr ';' .

    $default  reduce using rule 7 (stmt)


State 39

    8 stmt: VARIABLE '=' expr . ';'
    9     | VARIABLE '=' expr . ','
   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    EQ   shift, and go to state 23
    NE   shift, and go to state 24
    '>'  shift, and go to state 25
    '<'  shift, and go to state 26
    GE   shift, and go to state 27
    LE   shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35
    ';'  shift, and go to state 52
    ','  shift, and go to state 53


State 40

   29 expr: '(' expr ')' .

    $default  reduce using rule 29 (expr)


State 41

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr
   28     | expr EQ expr .

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 28 (expr)


State 42

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   27     | expr NE expr .
   28     | expr . EQ expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 27 (expr)


State 43

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   24     | expr '>' expr .
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 24 (expr)


State 44

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   23     | expr '<' expr .
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 23 (expr)


State 45

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   25     | expr GE expr .
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 25 (expr)


State 46

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   26     | expr LE expr .
   27     | expr . NE expr
   28     | expr . EQ expr

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 26 (expr)


State 47

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   18     | expr '+' expr .
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 18 (expr)


State 48

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   19     | expr '-' expr .
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '#'  shift, and go to state 33
    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 19 (expr)


State 49

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   20     | expr '*' expr .
   21     | expr . '/' expr
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 20 (expr)


State 50

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   21     | expr '/' expr .
   22     | expr . '#' expr
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 21 (expr)


State 51

   14 expr: expr . INC
   16     | expr . DEC
   18     | expr . '+' expr
   19     | expr . '-' expr
   20     | expr . '*' expr
   21     | expr . '/' expr
   22     | expr . '#' expr
   22     | expr '#' expr .
   23     | expr . '<' expr
   24     | expr . '>' expr
   25     | expr . GE expr
   26     | expr . LE expr
   27     | expr . NE expr
   28     | expr . EQ expr

    INC  shift, and go to state 34
    DEC  shift, and go to state 35

    $default  reduce using rule 22 (expr)


State 52

    8 stmt: VARIABLE '=' expr ';' .

    $default  reduce using rule 8 (stmt)


State 53

    9 stmt: VARIABLE '=' expr ',' .

    $default  reduce using rule 9 (stmt)
